# occt-import-js

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: native_build.yml  npm_publish.yml  wasm_build.yml
examples/: browser_step.html  browser_step_worker.html  node_step.js  stp_to_obj.js  three_viewer.html
occt-import-js/: .editorconfig
occt-import-js/example/: main.cpp
occt-import-js/src/: importer-brep.cpp  importer-brep.hpp  importer-iges.cpp  importer-iges.hpp  importer-step.cpp  importer-step.hpp  importer-utils.cpp  importer-utils.hpp  importer-xcaf.cpp  importer-xcaf.hpp  importer.cpp  importer.hpp  js-interface.cpp  occt-import-js.cpp  occt-import-js.hpp
test/: browser_step.html  node_step.js  test.js
test/testfiles/cax-if-brep/: as1_pe_203.brep
test/testfiles/conical-surface/: conical-surface.step
test/testfiles/cube-10x10mm/: Cube 10x10.igs  Cube 10x10.ipt  Cube 10x10.stl  Cube 10x10.stp  source.txt
test/testfiles/cube-fcstd/: cube.FCStd  cube.step  cube2.FCStd  cube2.step  cube3.FCStd  cube3.step
test/testfiles/cube-units/: cube-in.step  cube-m.step  cube-mm.step  cube.FCStd
test/testfiles/iges-cube/: cube.igs  source.txt
test/testfiles/rounded-cube/: rounded-cube.step
tools/: build_native_win_debug.bat  build_native_win_release.bat  build_wasm_win.bat  build_wasm_win_dist.bat  build_win.bat  generate_project_win.bat  setup_emscripten_win.bat
