cmake_minimum_required (VERSION 3.6)

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

set (CMAKE_SUPPRESS_REGENERATION 1)
set (CMAKE_CONFIGURATION_TYPES Debug;Release;RelWithDebInfo;MinSizeRel)

add_definitions (-DUNICODE -D_UNICODE)

project (OcctImportJS)

function (SetCompilerOptions module)
	target_compile_options (${module} PUBLIC "$<$<CONFIG:Debug>:-DDEBUG>")
	if (WIN32)
		set (AdditionalWarnings /w44061 /w44062 /w44265 /w44266 /w44355 /w44596 /w44800)
		target_compile_options (${module} PUBLIC /W3 ${AdditionalWarnings})
	else ()
		target_compile_options (${module} PUBLIC -std=c++11)
	endif ()
endfunction ()

# OcctImportJS

set (OcctSourceFolders)
set (OcctIncludeDirs)
function (AddOcctModule module)
	list (APPEND OcctSourceFolders occt/src/${module}/*.c*)
	list (APPEND OcctIncludeDirs occt/src/${module})
	set (OcctSourceFolders ${OcctSourceFolders} PARENT_SCOPE)
	set (OcctIncludeDirs ${OcctIncludeDirs} PARENT_SCOPE)
endfunction ()

AddOcctModule (Adaptor2d)
AddOcctModule (Adaptor3d)
AddOcctModule (AdvApprox)
AddOcctModule (APIHeaderSection)
AddOcctModule (AppCont)
AddOcctModule (AppParCurves)
AddOcctModule (Approx)
AddOcctModule (Bnd)
AddOcctModule (BndLib)
AddOcctModule (BRep)
AddOcctModule (BRepAdaptor)
AddOcctModule (BRepBndLib)
AddOcctModule (BRepBuilderAPI)
AddOcctModule (BRepCheck)
AddOcctModule (BRepClass3d)
AddOcctModule (BRepGProp)
AddOcctModule (BRepLib)
AddOcctModule (BRepTools)
AddOcctModule (BRepTopAdaptor)
AddOcctModule (BSplCLib)
AddOcctModule (BSplSLib)
AddOcctModule (BSplSLib)
AddOcctModule (BVH)
AddOcctModule (Convert)
AddOcctModule (CPnts)
AddOcctModule (CSLib)
AddOcctModule (ElCLib)
AddOcctModule (ElSLib)
AddOcctModule (Extrema)
AddOcctModule (GCPnts)
AddOcctModule (Geom)
AddOcctModule (Geom2d)
AddOcctModule (Geom2dAdaptor)
AddOcctModule (Geom2dConvert)
AddOcctModule (Geom2dEvaluator)
AddOcctModule (GeomAbs)
AddOcctModule (GeomAdaptor)
AddOcctModule (GeomConvert)
AddOcctModule (GeomEvaluator)
AddOcctModule (GeomLib)
AddOcctModule (GeomLProp)
AddOcctModule (GeomProjLib)
AddOcctModule (GeomTools)
AddOcctModule (gp)
AddOcctModule (GProp)
AddOcctModule (HeaderSection)
AddOcctModule (IFGraph)
AddOcctModule (IFSelect)
AddOcctModule (IntAna)
AddOcctModule (IntAna2d)
AddOcctModule (IntCurveSurface)
AddOcctModule (Interface)
AddOcctModule (LibCtl)
AddOcctModule (LProp)
AddOcctModule (math)
AddOcctModule (Message)
AddOcctModule (MoniTool)
AddOcctModule (NCollection)
AddOcctModule (OSD)
AddOcctModule (PLib)
AddOcctModule (Poly)
AddOcctModule (Precision)
AddOcctModule (ProjLib)
AddOcctModule (Quantity)
AddOcctModule (Resource)
AddOcctModule (Standard)
AddOcctModule (StdFail)
AddOcctModule (STEPBasic)
AddOcctModule (STEPConstruct)
AddOcctModule (STEPControl)
AddOcctModule (StepData)
AddOcctModule (TColGeom2d)
AddOcctModule (TColgp)
AddOcctModule (TCollection)
AddOcctModule (TColStd)
AddOcctModule (TopAbs)
AddOcctModule (TopExp)
AddOcctModule (TopLoc)
AddOcctModule (TopoDS)
AddOcctModule (TopTools)
AddOcctModule (Transfer)
AddOcctModule (TShort)
AddOcctModule (XSControl)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)
AddOcctModule (TODO)

file (GLOB OcctSourceFiles ${OcctSourceFolders})

set (OcctImportJSSourcesFolder occt-import-js/src)
file (GLOB
	OcctImportJSSourceFiles
	${OcctImportJSSourcesFolder}/*.hpp
	${OcctImportJSSourcesFolder}/*.cpp
)
source_group ("Sources" FILES ${OcctImportJSSourceFiles})
source_group ("OCCT" FILES ${OcctSourceFiles})
add_library (OcctImportJS ${OcctImportJSSourceFiles} ${OcctSourceFiles})
SetCompilerOptions (OcctImportJS)
target_include_directories (OcctImportJS PUBLIC	${OcctIncludeDirs})
set_target_properties(OcctImportJS PROPERTIES OUTPUT_NAME occt-import-js)
set_target_properties (OcctImportJS PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}")

# OcctImportJSExample

set (OcctImportJSExampleSourcesFolder occt-import-js/example)
file (GLOB
	OcctImportJSExampleSourceFiles
	${OcctImportJSExampleSourcesFolder}/*.hpp
	${OcctImportJSExampleSourcesFolder}/*.cpp
)
source_group ("Sources" FILES ${OcctImportJSExampleSourceFiles})
add_executable (OcctImportJSExample ${OcctImportJSExampleSourceFiles})
SetCompilerOptions (OcctImportJSExample)
target_include_directories (OcctImportJSExample PUBLIC ${OcctImportJSSourcesFolder})
target_link_libraries (OcctImportJSExample OcctImportJS)
set_target_properties (OcctImportJSExample PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
