cmake_minimum_required (VERSION 3.6)

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

set (CMAKE_SUPPRESS_REGENERATION 1)
set (CMAKE_CONFIGURATION_TYPES Debug;Release;RelWithDebInfo;MinSizeRel)

add_definitions (-DUNICODE -D_UNICODE)

project (OcctImportJS)

# OcctImportJS

set (OcctSourceFolders)
set (OcctIncludeDirs)
function (AddOcctModule module)
	list (APPEND OcctSourceFolders occt/src/${module}/*.c*)
	list (APPEND OcctIncludeDirs occt/src/${module})
	set (OcctSourceFolders ${OcctSourceFolders} PARENT_SCOPE)
	set (OcctIncludeDirs ${OcctIncludeDirs} PARENT_SCOPE)
endfunction ()

AddOcctModule (Adaptor2d)
AddOcctModule (Adaptor3d)
AddOcctModule (AdvApp2Var)
AddOcctModule (AdvApprox)
AddOcctModule (APIHeaderSection)
AddOcctModule (AppBlend)
AddOcctModule (AppCont)
AddOcctModule (AppDef)
AddOcctModule (AppParCurves)
AddOcctModule (Approx)
AddOcctModule (ApproxInt)
AddOcctModule (Bnd)
AddOcctModule (BndLib)
AddOcctModule (BRep)
AddOcctModule (BRepAdaptor)
AddOcctModule (BRepBndLib)
AddOcctModule (BRepBuilderAPI)
AddOcctModule (BRepCheck)
AddOcctModule (BRepClass)
AddOcctModule (BRepClass3d)
AddOcctModule (BRepExtrema)
AddOcctModule (BRepGProp)
AddOcctModule (BRepLib)
AddOcctModule (BRepMesh)
AddOcctModule (BRepMeshData)
AddOcctModule (BRepTools)
AddOcctModule (BRepTopAdaptor)
AddOcctModule (BSplCLib)
AddOcctModule (BSplSLib)
AddOcctModule (BSplSLib)
AddOcctModule (BVH)
AddOcctModule (Convert)
AddOcctModule (CPnts)
AddOcctModule (CSLib)
AddOcctModule (ElCLib)
AddOcctModule (ElSLib)
AddOcctModule (Extrema)
AddOcctModule (FEmTool)
AddOcctModule (GC)
AddOcctModule (gce)
AddOcctModule (GCE2d)
AddOcctModule (GCPnts)
AddOcctModule (Geom)
AddOcctModule (Geom2d)
AddOcctModule (Geom2dAdaptor)
AddOcctModule (Geom2dAPI)
AddOcctModule (Geom2dConvert)
AddOcctModule (Geom2dEvaluator)
AddOcctModule (Geom2dInt)
AddOcctModule (Geom2dLProp)
AddOcctModule (GeomAbs)
AddOcctModule (GeomAdaptor)
AddOcctModule (GeomAPI)
AddOcctModule (GeomConvert)
AddOcctModule (GeomEvaluator)
AddOcctModule (GeomFill)
AddOcctModule (GeomInt)
AddOcctModule (GeomLib)
AddOcctModule (GeomLProp)
AddOcctModule (GeomProjLib)
AddOcctModule (GeomTools)
AddOcctModule (GeomToStep)
AddOcctModule (gp)
AddOcctModule (GProp)
AddOcctModule (HeaderSection)
AddOcctModule (Hermit)
AddOcctModule (IFGraph)
AddOcctModule (IFSelect)
AddOcctModule (IMeshData)
AddOcctModule (IMeshTools)
AddOcctModule (IntAna)
AddOcctModule (IntAna2d)
AddOcctModule (IntCurve)
AddOcctModule (IntCurvesFace)
AddOcctModule (IntCurveSurface)
AddOcctModule (Interface)
AddOcctModule (Intf)
AddOcctModule (IntImp)
AddOcctModule (IntImpParGen)
AddOcctModule (IntPatch)
AddOcctModule (IntPolyh)
AddOcctModule (IntRes2d)
AddOcctModule (IntStart)
AddOcctModule (IntSurf)
AddOcctModule (IntWalk)
AddOcctModule (Law)
AddOcctModule (LibCtl)
AddOcctModule (LProp)
AddOcctModule (math)
AddOcctModule (Message)
AddOcctModule (MoniTool)
AddOcctModule (NCollection)
AddOcctModule (OSD)
AddOcctModule (PLib)
AddOcctModule (Plugin)
AddOcctModule (Poly)
AddOcctModule (Precision)
AddOcctModule (ProjLib)
AddOcctModule (Quantity)
AddOcctModule (Resource)
AddOcctModule (RWHeaderSection)
AddOcctModule (RWStepAP203)
AddOcctModule (RWStepAP214)
AddOcctModule (RWStepAP242)
AddOcctModule (RWStepBasic)
AddOcctModule (RWStepDimTol)
AddOcctModule (RWStepElement)
AddOcctModule (RWStepFEA)
AddOcctModule (RWStepGeom)
AddOcctModule (RWStepKinematics)
AddOcctModule (RWStepRepr)
AddOcctModule (RWStepShape)
AddOcctModule (RWStepVisual)
AddOcctModule (ShapeAlgo)
AddOcctModule (ShapeAnalysis)
AddOcctModule (ShapeBuild)
AddOcctModule (ShapeConstruct)
AddOcctModule (ShapeCustom)
AddOcctModule (ShapeExtend)
AddOcctModule (ShapeFix)
AddOcctModule (ShapeProcess)
AddOcctModule (ShapeUpgrade)
AddOcctModule (Standard)
AddOcctModule (StdFail)
AddOcctModule (StepAP203)
AddOcctModule (StepAP214)
AddOcctModule (StepAP242)
AddOcctModule (STEPBasic)
AddOcctModule (STEPConstruct)
AddOcctModule (STEPControl)
AddOcctModule (StepData)
AddOcctModule (StepDimTol)
AddOcctModule (STEPEdit)
AddOcctModule (StepElement)
AddOcctModule (StepFEA)
AddOcctModule (StepFile)
AddOcctModule (StepGeom)
AddOcctModule (StepKinematics)
AddOcctModule (StepRepr)
AddOcctModule (StepSelect)
AddOcctModule (STEPSelections)
AddOcctModule (StepShape)
AddOcctModule (StepToGeom)
AddOcctModule (StepToGeom)
AddOcctModule (StepToTopoDS)
AddOcctModule (StepVisual)
AddOcctModule (TColGeom)
AddOcctModule (TColGeom2d)
AddOcctModule (TColgp)
AddOcctModule (TCollection)
AddOcctModule (TColStd)
AddOcctModule (TopAbs)
AddOcctModule (TopClass)
AddOcctModule (TopExp)
AddOcctModule (TopLoc)
AddOcctModule (TopoDS)
AddOcctModule (TopoDSToStep)
AddOcctModule (TopTools)
AddOcctModule (TopTrans)
AddOcctModule (Transfer)
AddOcctModule (TransferBRep)
AddOcctModule (TShort)
AddOcctModule (UnitsMethods)
AddOcctModule (XSAlgo)
AddOcctModule (XSControl)

file (GLOB OcctSourceFiles ${OcctSourceFolders})

set (OcctImportJSSourcesFolder occt-import-js/src)
file (GLOB
	OcctImportJSSourceFiles
	${OcctImportJSSourcesFolder}/*.hpp
	${OcctImportJSSourcesFolder}/*.cpp
)
source_group ("Sources" FILES ${OcctImportJSSourceFiles})
source_group ("OCCT" FILES ${OcctSourceFiles})

if (${EMSCRIPTEN})
	add_executable (OcctImportJS ${OcctImportJSSourceFiles} ${OcctSourceFiles})
	target_compile_options (OcctImportJS PUBLIC "$<$<CONFIG:Debug>:-gsource-map>")
	target_compile_options (OcctImportJS PUBLIC -fexceptions)

	target_link_options (OcctImportJS PUBLIC -sMODULARIZE=1)
	target_link_options (OcctImportJS PUBLIC -sEXPORT_NAME='occtimportjs')
	target_link_options (OcctImportJS PUBLIC -sALLOW_MEMORY_GROWTH=1 --no-heap-copy)
	target_link_options (OcctImportJS PUBLIC -sNO_DISABLE_EXCEPTION_CATCHING)
	
	# to check for memory errors
	# target_link_options (OcctImportJS PUBLIC -sASSERTIONS=1 -sSAFE_HEAP=1 -sWARN_UNALIGNED=1)
	
	target_link_options (OcctImportJS PUBLIC --bind)
else ()
	add_library (OcctImportJS ${OcctImportJSSourceFiles} ${OcctSourceFiles})
endif ()

target_include_directories (OcctImportJS PUBLIC	${OcctIncludeDirs})
set_target_properties(OcctImportJS PROPERTIES OUTPUT_NAME occt-import-js)
set_target_properties (OcctImportJS PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}")

# OcctImportJSExample

if (${EMSCRIPTEN})
else ()
	set (OcctImportJSExampleSourcesFolder occt-import-js/example)
	file (GLOB
		OcctImportJSExampleSourceFiles
		${OcctImportJSExampleSourcesFolder}/*.hpp
		${OcctImportJSExampleSourcesFolder}/*.cpp
	)
	source_group ("Sources" FILES ${OcctImportJSExampleSourceFiles})
	add_executable (OcctImportJSExample ${OcctImportJSExampleSourceFiles})
	target_include_directories (OcctImportJSExample PUBLIC ${OcctImportJSSourcesFolder})
	target_link_libraries (OcctImportJSExample OcctImportJS)
	set_target_properties (OcctImportJSExample PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
endif ()
